--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,23 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular-architects/ngrx-toolkit": "^18.1.1",
-    "@angular/animations": "^19.0.0-rc.2",
-    "@angular/common": "^19.0.0-rc.2",
-    "@angular/compiler": "^19.0.0-rc.2",
-    "@angular/core": "^19.0.0-rc.2",
-    "@angular/forms": "^19.0.0-rc.2",
-    "@angular/platform-browser": "^19.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "^19.0.0-rc.2",
-    "@angular/router": "^19.0.0-rc.2",
+    "@angular/animations": "19.0.0",
+    "@angular/common": "19.0.0",
+    "@angular/compiler": "19.0.0",
+    "@angular/core": "19.0.0",
+    "@angular/forms": "19.0.0",
+    "@angular/platform-browser": "19.0.0",
+    "@angular/platform-browser-dynamic": "19.0.0",
+    "@angular/router": "19.0.0",
     "@ngrx/signals": "^18.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.0-rc.2",
-    "@angular/cli": "^19.0.0-rc.2",
-    "@angular/compiler-cli": "^19.0.0-rc.2",
+    "@angular-devkit/build-angular": "19.0.0",
+    "@angular/cli": "19.0.0",
+    "@angular/compiler-cli": "19.0.0",
     "@playwright/test": "^1.48.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
